Fix checkbox spacing

--- a/src/app/styles/components/Categories.scss
+++ b/src/app/styles/components/Categories.scss
@@ -18,11 +18,12 @@
   }
 
   input[type="checkbox"]{
-    margin: 0 1rem 0 0;
+    margin: 0 0.25rem 0 0;
   }
 
   .inline-selectors {
     flex: 1;
+    margin: 0.25rem;
   }
 }
 
