--- a/src/app/styles/styles.css
+++ b/src/app/styles/styles.css
@@ -84,11 +84,12 @@ select option {
 
 input[type="checkbox"] {
   font-size: inherit;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
   background:white;
   border-radius:5px;
   border:2px solid #555;
+  vertical-align: middle;
 }
 
 input[type='checkbox']:checked {
@@ -106,9 +107,8 @@ input[type="checkbox"]:focus{
 @media (max-width: 769px) {
   #content {
     min-height: 60vh;
-    padding: 1rem;
     width: unset;
-    margin: 0 auto;
+    margin: 1rem;
     font-size: 1.15em;
   }
 }
